Corrections to file

--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
     <head>
         <title>Imagine Dragons</title>
+        <!--link of the CSS file that styled the page-->
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="Section 1" >
             <h1> Imagine Dragons</h1>
         </div>
+        <!-- Section below h1 divided into two-->
         <div class="Section_2">
+            <!--The first half the Image half-->
             <div class="Image">
             </div>
+            <!--The second half the Description Part-->
             <div class="About">
                 <h2>About</h2>
                 <p>Imagine Dragons is an American pop rock band from Las Vegas, Nevada.<br>It consists of lead singer Dan Reynolds, lead guitarist Wayne Sermon, bassist Ben McKee, and drummer Daniel Platzman.<br>The band first gained exposure with the release of their single "It's Time", followed by their award-winning debut studio album Night Visions (2012)<br> which resulted in the chart-topping singles "Radioactive" and "Demons".<br> Rolling Stone named "Radioactive", which holds the record for most weeks charted on the Billboard Hot 100, the "biggest rock hit of the year".<br> MTV called them "the year's biggest breakout band",and Billboard named them their "Breakthrough Band of 2013" and "Biggest Band of 2017".<br> and placed them at the top of their "Year in Rock" rankings for 2013,2017,and 2018.<br> Imagine Dragons topped the Billboard Year-End "Top Artists – Duo/Group" category in 2018.<br><br>
+                <!--a bold list of Imagine Dragons albums and some inline CSS-->
                 <b style="font-size: 35px;font-family:Georgia, 'Times New Roman', Times, serif;">Albums
                     <ul>
                         <li>Origins</li>
@@ -27,8 +32,10 @@
                 </b></p>
           </div>
         </div>
+        <!--The third section containing all the Band Members and a little description of each-->
         <div class="Section_3">
             <h3>Band Members</h3>
+            <!--Description of band members and some inline CSS-->
             <div class="list">
                 <p class="one" style="width: 100%;"><figcaption><strong>Daniel Coulter Reynolds</strong><br> (born July 14, 1987)<br>is an American singer, songwriter, and record producer. He is the <b>lead vocalist</b> and only remaining original member of the pop rock band Imagine Dragons</figcaption></p>
                 <p class="two"style="width: 100%;"><figcaption><strong>Daniel Wayne Sermon</strong><br> (born June 15, 1984)<br> is an American musician, songwriter, and record producer. He is the lead guitarist for the pop rock band Imagine Dragons.</figcaption></p>
@@ -36,19 +43,19 @@
                 <p class="four"style="width: 100%;"><figcaption><strong>Daniel James Platzman</strong><br>(born September 28, 1986)<br> is an American musician, songwriter, record producer and composer. He is the drummer for the pop rock band Imagine Dragons.</figcaption></p>
             </div>
         </div>
+        <!--Last Section of the page containing Favorite Tracks-->
         <div id="songs" style=" float:middle; position:relative; width:100%; height:100%; color: white; font-size: 20px;">
             <h3 style="font-size: 40px; text-align:center; color:white;"> Favorite Tracks</h3>
-            <div class="All_songs" style=”float:left;width:auto;font-style:italic;font-weight:bold:14px;”>
+            <!--Embeded Youtube videos of my Favorite Tracks with Name links-->
+             <div class="All_songs" style=”float:left;width:auto;font-style:italic;font-weight:bold:14px;”>
                 <div style="float: left; width: 33.33%; padding: 5px; margin:0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/fKopy74weus"></iframe><a href="https://youtu.be/fKopy74weus">Thunder</a></div>
                 <div style=" float: right; width: 33.33%;padding: 5px;margin: 0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/k3zimSRKqNw"></iframe><a href="https://youtu.be/k3zimSRKqNw"> Follow you</a></div>
                 <div style=" float: left; width:33.3%; padding: 5px; margin: 0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/4ht80uzIhNs"></iframe><a href="https://youtu.be/wm3G84Nikks"> Bet My Life</a></div>
                 <div style="float: right; width:33.3%;padding: 5px;margin: 0px 40px;"><iframe width="420" height="315" src="https://www.youtube.com/embed/I-QfPUz1es8"></iframe><a href="https://youtu.be/I-QfPUz1es8">Bad Liar</a> </div>
-
-
-             </ol>
              </div>
             
             </div>
+            <!--Footer of the Page with the Authors Details-->
             <footer>
                 <p style="color: white;font-weight: bold;">Copy right@<br>Author: Sultan Kirigha<br>
                 <a href="sultankirigha@gmail.com">sultankirigha@gmail.com</a></p>
