--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <h3 style="font-size: 40px; text-align:center; color:white;"> Favorite Tracks</h3>
             <!--Embeded Youtube videos of my Favorite Tracks with Name links-->
              <div class="All_songs" style=”float:left;width:auto;font-style:italic;font-weight:bold:14px;”>
-                <div style="float: left; width: 33.33%; padding: 5px; margin:0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/fKopy74weus"></iframe><a href="https://youtu.be/fKopy74weus">Thunder</a></div>
-                <div style=" float: right; width: 33.33%;padding: 5px;margin: 0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/k3zimSRKqNw"></iframe><a href="https://youtu.be/k3zimSRKqNw"> Follow you</a></div>
-                <div style=" float: left; width:33.3%; padding: 5px; margin: 0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/4ht80uzIhNs"></iframe><a href="https://youtu.be/wm3G84Nikks"> Bet My Life</a></div>
-                <div style="float: right; width:33.3%;padding: 5px;margin: 0px 40px;"><iframe width="420" height="315" src="https://www.youtube.com/embed/I-QfPUz1es8"></iframe><a href="https://youtu.be/I-QfPUz1es8">Bad Liar</a> </div>
+                <div style="float: left; width: 33.33%; padding: 5px; margin:0px 40px; box-shadow: 5px 5px 2em;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/fKopy74weus"></iframe><a href="https://youtu.be/fKopy74weus">Thunder</a></div>
+                <div style=" float: right; width: 33.33%;padding: 5px;margin: 0px 40px;box-shadow: 5px 5px 2em"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/k3zimSRKqNw"></iframe><a href="https://youtu.be/k3zimSRKqNw"> Follow you</a></div>
+                <div style=" float: left; width:33.3%; padding: 5px; margin: 0px 40px;box-shadow: 5px 5px 2em"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/4ht80uzIhNs"></iframe><a href="https://youtu.be/wm3G84Nikks"> Bet My Life</a></div>
+                <div style="float: right; width:33.3%;padding: 5px;margin: 0px 40px;box-shadow: 5px 5px 2em"><iframe width="420" height="315" src="https://www.youtube.com/embed/I-QfPUz1es8"></iframe><a href="https://youtu.be/I-QfPUz1es8">Bad Liar</a> </div>
              </div>
             
             </div>
