--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2>About</h2>
                 <p>Imagine Dragons is an American pop rock band from Las Vegas, Nevada.<br>It consists of lead singer Dan Reynolds, lead guitarist Wayne Sermon, bassist Ben McKee, and drummer Daniel Platzman.<br>The band first gained exposure with the release of their single "It's Time", followed by their award-winning debut studio album Night Visions (2012)<br> which resulted in the chart-topping singles "Radioactive" and "Demons".<br> Rolling Stone named "Radioactive", which holds the record for most weeks charted on the Billboard Hot 100, the "biggest rock hit of the year".<br> MTV called them "the year's biggest breakout band",and Billboard named them their "Breakthrough Band of 2013" and "Biggest Band of 2017".<br> and placed them at the top of their "Year in Rock" rankings for 2013,2017,and 2018.<br> Imagine Dragons topped the Billboard Year-End "Top Artists – Duo/Group" category in 2018.<br><br>
                 <!--a bold list of Imagine Dragons albums and some inline CSS-->
-                <b style="font-size: 20px;font-family:Georgia, 'Times New Roman', Times, serif;">Albums
+                <b style="font-size: 20px;text-align:center;:Georgia, 'Times New Roman', Times, serif;">Albums
                     <ul>
                         <li>Origins</li>
                         <li>Evolve</li>
@@ -48,10 +48,10 @@
             <h3 style="font-size: 40px; text-align:center; color:white;"> Favorite Tracks</h3>
             <!--Embeded Youtube videos of my Favorite Tracks with Name links-->
              <div class="All_songs" style=”float:left;width:auto;font-style:italic;font-weight:bold:14px;”>
-                <div style="float: left; width: 33.33%; padding: 5px; margin:0px 40px; box-shadow: 5px 5px 2em;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/fKopy74weus"></iframe><a href="https://youtu.be/fKopy74weus">Thunder</a></div>
-                <div style=" float: right; width: 33.33%;padding: 5px;margin: 0px 40px;box-shadow: 5px 5px 2em"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/k3zimSRKqNw"></iframe><a href="https://youtu.be/k3zimSRKqNw"> Follow you</a></div>
-                <div style=" float: left; width:33.3%; padding: 5px; margin: 0px 40px;box-shadow: 5px 5px 2em"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/4ht80uzIhNs"></iframe><a href="https://youtu.be/wm3G84Nikks"> Bet My Life</a></div>
-                <div style="float: right; width:33.3%;padding: 5px;margin: 0px 40px;box-shadow: 5px 5px 2em"><iframe width="420" height="315" src="https://www.youtube.com/embed/I-QfPUz1es8"></iframe><a href="https://youtu.be/I-QfPUz1es8">Bad Liar</a> </div>
+                <div style="float: left; width: 33.33%; padding: 5px; margin:0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/fKopy74weus"></iframe><a href="https://youtu.be/fKopy74weus">Thunder</a></div>
+                <div style=" float: right; width: 33.33%;padding: 5px;margin: 0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/k3zimSRKqNw"></iframe><a href="https://youtu.be/k3zimSRKqNw"> Follow you</a></div>
+                <div style=" float: left; width:33.3%; padding: 5px; margin: 0px 40px;"><iframe width="420" height="315" float="right" src="https://www.youtube.com/embed/4ht80uzIhNs"></iframe><a href="https://youtu.be/wm3G84Nikks"> Bet My Life</a></div>
+                <div style="float: right; width:33.3%;padding: 5px;margin: 0px 40px;"><iframe width="420" height="315" src="https://www.youtube.com/embed/I-QfPUz1es8"></iframe><a href="https://youtu.be/I-QfPUz1es8">Bad Liar</a> </div>
              </div>
             
             </div>
